// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must handle ranges that include surrogate pairs 1`] = `
Array [
  Object {
    "key": "6",
    "length": 5,
    "offset": 6,
  },
  Object {
    "key": "8",
    "length": 2,
    "offset": 13,
  },
]
`;

exports[`must return an empty array if no entities present 1`] = `Array []`;

exports[`must return an empty array if no entities present 2`] = `Array []`;

exports[`must return interior ranges with multiple entities present 1`] = `
Array [
  Object {
    "key": "6",
    "length": 5,
    "offset": 2,
  },
  Object {
    "key": "8",
    "length": 1,
    "offset": 4,
  },
]
`;

exports[`must return overlapping ranges with multiple entities present 1`] = `
Array [
  Object {
    "key": "6",
    "length": 3,
    "offset": 2,
  },
  Object {
    "key": "8",
    "length": 3,
    "offset": 4,
  },
]
`;

exports[`must return ranges with an entity present more than once 1`] = `
Array [
  Object {
    "key": "6",
    "length": 2,
    "offset": 2,
  },
  Object {
    "key": "6",
    "length": 2,
    "offset": 5,
  },
]
`;

exports[`must return ranges with multiple entities present 1`] = `
Array [
  Object {
    "key": "6",
    "length": 2,
    "offset": 2,
  },
  Object {
    "key": "8",
    "length": 2,
    "offset": 5,
  },
]
`;

exports[`must return ranges with the storage-mapped key 1`] = `
Array [
  Object {
    "key": "6",
    "length": 2,
    "offset": 2,
  },
]
`;
